--- a/text/safrole.tex
+++ b/text/safrole.tex
@@ -141,15 +141,15 @@ Note that on epoch changes the posterior queued validator key set $\pendingset'$
 
 The header must contain a valid seal and valid \textsc{vrf} output. These are two signatures both using the current slot's seal key; the message data of the former is the header's serialization omitting the seal component $\H_\¬sealsig$, whereas the latter is used as a bias-resistant entropy source and thus its message must already have been fixed: we use the entropy stemming from the \textsc{vrf} of the seal signature. Formally:
 \begin{align}
-  \nonumber \using i = \cyclic{\safroleticket[\H_\¬timeslot]}\colon \\
+  \nonumber \using i = \cyclic{\sealtickets'[\H_\¬timeslot]}\colon \\
   \label{eq:ticketconditiontrue}
-  \safroleticket \in \sequence{\safroleticket} &\implies \abracegroup[\,]{
+  \sealtickets' \in \sequence{\safroleticket} &\implies \abracegroup[\,]{
       &i_\st¬id = \banderout{\H_\¬sealsig}\,,\\
       &\H_\¬sealsig \in \bssignature{\H_\¬authorbskey}{\Xticket \concat \entropy'_3 \append i_\st¬entryindex}{\encodeunsignedheader{\H}}\,,\\
       &\isticketed = 1
   }\\
   \label{eq:ticketconditionfalse}
-  \safroleticket \in \sequence{\bskey} &\implies \abracegroup[\,]{
+  \sealtickets' \in \sequence{\bskey} &\implies \abracegroup[\,]{
       &i = \H_\¬authorbskey\,,\\
       &\H_\¬sealsig \in \bssignature{\H_\¬authorbskey}{\Xfallback \concat \entropy'_3}{\encodeunsignedheader{\H}}\,,\\
       &\isticketed = 0
