Nit: WR core indices should be unique in Guarantees Xt

--- a/text/reporting_assurance.tex
+++ b/text/reporting_assurance.tex
@@ -254,7 +254,7 @@ We begin by defining the guarantees extrinsic, $\xtguarantees$, a series of \emp
     \isa{\xg¬timeslot}{\timeslot},\,
     \isa{\xg¬credential}{\sequence[2:3]{\tuple{\valindex, \edsignaturebase}}}
   }} \\
-  \xtguarantees &= \sqorderby{(g_\xg¬workreport)_\wr¬core}{g \in \xtguarantees}
+  \xtguarantees &= \sqorderuniqby{(g_\xg¬workreport)_\wr¬core}{g \in \xtguarantees}
 \end{align}
 
 The credential is a sequence of two or three tuples of a unique validator index and a signature. Credentials must be ordered by their validator index:
