--- a/preamble.tex
+++ b/preamble.tex
@@ -301,7 +301,6 @@
 
 %%%%%%%%%%%%
 % Simple Universal types (blackboard letters)
-% Unused: U
 
 % Terms defined as being in these sets never get bolded
 \newcommand*{\workerror}{\mathbb{E}}
@@ -477,7 +476,7 @@
 \newcommand*{\wd¬exportcount}{\¬exportcount}
 \newcommand*{\wd¬result}{\¬result}
 
-\newcommand*{\operandtuple}{\mathbb{I}}
+\newcommand*{\operandtuple}{\mathbb{U}}
 \newcommand{\otX}{\mathbf{x}}
 \newcommand*{\ot¬packagehash}{\¬packagehash}
 \newcommand*{\ot¬segroot}{\¬segroot}
@@ -486,6 +485,9 @@
 \newcommand*{\ot¬payloadhash}{\¬payloadhash}
 \newcommand*{\ot¬gaslimit}{\¬gaslimit}
 \newcommand*{\ot¬result}{\¬result}
+
+\newcommand*{\accinput}{\mathbb{I}}
+\newcommand{\aiX}{\mathbf{x}}
 
 \newcommand*{\avspec}{\mathbb{Y}}
 \newcommand*{\asX}{\mathbf{x}}
