remove extra new line

--- a/text/auditing.tex
+++ b/text/auditing.tex
@@ -66,7 +66,7 @@ We define our initial audit tranche in terms of a verifiable random quantity $\l
 We may then define $\local¬tranche\sub{0}$ as the non-empty items to audit through a verifiably random selection of ten cores:
 \begin{align}
   \local¬tranche\sub{0} &= \set{\build{\wrcX}{\wrcX \in \mathbf{p}\subrange{}{10}, \wrX \ne \none}} \\
-  \where \mathbf{p} &= \fyshuffle{\sq{\build{\tup{\cX, \local¬reports\sub{\cX}}}{\cX \orderedin \coreindex}}, \banderout{\local¬seed\sub{0}}} \\
+  \where \mathbf{p} &= \fyshuffle{\sq{\build{\tup{\cX, \local¬reports\sub{\cX}}}{\cX \orderedin \coreindex}}, \banderout{\local¬seed\sub{0}}}
 \end{align}
 
 Every $\Ctrancheseconds = 8$ seconds following a new time slot, a new tranche begins, and we may determine that additional cores warrant an audit from us. Such items are defined as $\local¬tranche\sub{n}$ where $n$ is the current tranche. Formally:
