--- a/preamble.tex
+++ b/preamble.tex
@@ -126,7 +126,7 @@
 \vskip.15ex
 \hbox{\scalebox{0.5}[0.5]{${\scriptscriptstyle \blacktriangleright}$}}
 }}}
-\newcommand*{\tup}[1]{\!\left(#1\right)\!}
+\newcommand*{\tup}[1]{\left(#1\right)}
 \newcommand*{\tuple}[1]{\!\left\lgroup#1\right\rgroup\!}
 \newcommand*{\is}[2]{#1\tricolon#2}
 \newcommand*{\isa}[2]{#1\in #2}
@@ -317,6 +317,7 @@
 \newcommand*{\bitstring}[1][]{\mathbb{b}_{#1}}
 \newcommand*{\blob}[1][]{\mathbb{B}_{#1}}
 \newcommand*{\metadatakey}{\blob[128]}
+\newcommand*{\memo}{\blob[\Cmemosize]}
 
 %%%%%%%%%%%%
 % RAM access variants
@@ -453,6 +454,7 @@
 \newcommand*{\wi¬extrinsics}{\mathbf{x}}
 
 \newcommand*{\workreport}{\mathbb{R}}
+\newcommand*{\workreports}{\sequence{\workreport}}
 \newcommand*{\wrX}{\mathbf{r}}
 \newcommand*{\wr¬avspec}{\mathbf{s}}
 \newcommand*{\wr¬context}{\¬context}
